--- a/src/partials/vite-promo.html
+++ b/src/partials/vite-promo.html
@@ -1,3 +1,4 @@
+<!--
 <section class="vite-promo">
   <div class="container">
     <div class="wrapper">
@@ -33,7 +34,7 @@
     </div>
 
     <div class="thumb">
-      <!-- Path to images as from index.html file -->
+      Path to images as from index.html file
       <img
         class="pic"
         src="./img/vite-logo.png"
@@ -44,3 +45,5 @@
     </div>
   </div>
 </section>
+
+-->
